--- a/docker/tasks/main.yml
+++ b/docker/tasks/main.yml
@@ -74,4 +74,5 @@
     append: yes
     groups: docker
     state: present
-    name: {{ docker_user }}
+    name: "{{ item }}"
+  with_items: "{{ docker_users }}"
