--- a/docker/vars/main.yml
+++ b/docker/vars/main.yml
@@ -1,9 +1,5 @@
 ---
 # vars file for docker-fedora
 
-vg: docker
-pv: /dev/vdb
-docker_compose_version: 1.9.0
-os: Darwin
-machine_architecture: x86_64
-docker_user: username
+docker_pv: 
+docker_docker_users:
