--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,8 +9,8 @@ galaxy_info:
     - name: Fedora
     - name: Ubuntu
       versions:
-        - 12.04
-        - 14.04
+        - precise
+        - trusty
     - name: Debian
   galaxy_tags:
     - docker
